--- a/index.html
+++ b/index.html
@@ -1,19 +1,90 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8">
 
-  <title>My Resume</title>
+    <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
-  <h1>My Resume</h1>
-</body>
+  <body>
+    <div id="container">
+      <header>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
+        </nav>
+      </header>
+
+      <section id="top-section">
+        <div class="img-container">
+          <img id="person-img" src="http://placekitten.com/300/300">
+        </div>
+        <h1>Heber Gonzalez - Web Dev</h1>
+        <h3>Will Code For Food!</h3>
+        <hr>
+        <h2>Ocassionally, I have time to work on side projects, if you're interested, let me know by signing up on this website.</h2>
+        <button>Let's Team Up</button>
+      </section>
+
+      <section id="middle-section">
+        <div>
+          <h2>Listen up...</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ratione, quas facere sunt iure asperiores atque, similique provident qui commodi excepturi voluptatibus molestias molestiae optio ab ut aliquid. Incidunt!</p>
+        </div>
+        <div>
+          <h2>Stuff I'm Good At:
+          </h2>
+          <ul>
+            <li>Basketball</li>
+            <li>Coding up UI</li>
+            <li>Playing lots of videogames</li>
+            <li>Using {less}</li>
+            <li>Taking long naps</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="lower-section">
+        <h2>Work History</h2>
+        <table>
+          <tr>
+            <th>Yrs</th>
+            <th>Company</th>
+            <th>Title</th>
+            <th>Tech Used</th>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Microsoft</td>
+            <td>Software Engineer</td>
+            <td>Swift</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>Apple</td>
+            <td>Web Dev</td>
+            <td>php</td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>Amazon</td>
+            <td>Dev Ops</td>
+            <td>AWS</td>
+          </tr>
+        </table>
+      </section>
+      <footer>
+        <h3>Copyright Awesomeness 2019</h3>
+      </footer>
+    </div>
+  </body>
 </html>
