finished nav and added img folder

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <section id="top-section">
         <div class="img-container">
-          <img id="person-img" src="http://placekitten.com/300/300">
+          <img id="programmer-img" src="img/programmer.jpg">
         </div>
         <h1>Heber Gonzalez - Web Dev</h1>
         <h3>Will Code For Food!</h3>
