--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="container">
       <header>
         <nav>
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">About</a>
           <a href="#">Portfolio</a>
           <a href="#">Contact</a>
