Media query problems

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="container">
       <header>
-        <nav>
+        <nav class="nav-bar">
           <a href="index.html">Home</a>
           <a href="#">About</a>
           <a href="#">Portfolio</a>
@@ -36,13 +36,12 @@
       </section>
 
       <section id="middle-section">
-        <div>
+        <div id="left-mid-section">
           <h2>Listen up...</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ratione, quas facere sunt iure asperiores atque, similique provident qui commodi excepturi voluptatibus molestias molestiae optio ab ut aliquid. Incidunt!</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius cupiditate ratione, quas facere sunt iure asperiores atque, similique provident qui commodi excepturi voluptatibus molestias molestiae optio ab ut aliquid. Incidunt! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid maxime, quod perferendis, hic quisquam, totam distinctio corporis veritatis pariatur sequi earum quos tempore iure quas deleniti sapiente vero itaque aut.</p>
         </div>
-        <div>
-          <h2>Stuff I'm Good At:
-          </h2>
+        <div id="right-mid-section">
+          <h2>Stuff I'm Good At:</h2>
           <ul>
             <li>Basketball</li>
             <li>Coding up UI</li>
