--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content= "width=device-width, initial-scale=1"/>
 
     <title>My Resume</title>
 
@@ -14,7 +15,7 @@
   </head>
 
   <body>
-    <div id="container">
+    <div class="container">
       <header>
         <nav class="nav-bar">
           <a href="index.html">Home</a>
